@@ -1,0 +1,4 @@
+As of Workflow 7.x-1.3, the module Workflow Rules support Entity API.
+
+Every Node Action and Condition is copied to a Entity Action and Condition.
+You are encouraged to migrate your Node Rules Entity Rules.
