@@ -6,30 +6,8 @@
  * all prefer a lower code footprint and better performance.
  * Additional credit to gcassie ( http://drupal.org/user/80260 ) for
  * the initial push to split rules out of core workflow.
- */
-
-
-/**
- * Implements hook_workflow().
  *
- * @param $op
- *   The current workflow operation: 'transition pre' or 'transition post'.
- * @param $old_state
- *   The state ID of the current state.
- * @param  $new_state
- *   The state ID of the new state.
- * @param $node
- *   The node whose workflow state is changing.
+ * This file is intentionally left blanc.
+ * The code is in the workflow_rules.workflow.inc file.
+ * Drupal 7 requires a .module file, even if it is empty.
  */
-function workflow_rules_workflow($op, $old_state, $new_state, $node) {
-  switch ($op) {
-    case 'transition post':
-      // Rules are updated on after the transition.
-      if ($old_state == $new_state) {
-        rules_invoke_event('workflow_comment_added', $node, $old_state, $new_state);
-        return;
-      }
-      rules_invoke_event('workflow_state_changed', $node);
-    break;
-  }
-}
